--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,8 @@ html {
 }
 
 body {
-	background: $white;
+	background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ8lS4H5efSXbAB0kq4GNIGLx5FElzaHUVmygjQrsvGG8CICyKoTg")
+		
   font: 18px/1.4 $helvetica;
   color: $darkGray;
 }
