--- a/style.scss
+++ b/style.scss
@@ -28,7 +28,7 @@ body {
   max-width: 740px;
   padding: 0 10px;
   width: 100%;
-	background-color: rgba(204, 176, 108, 0.7);
+	background-color: rgba(255, 0, 0, 0.7);
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -108,7 +108,7 @@ strong, b {
 }
 
 table, th, td {
-	border: 2px solid #d3d3d3 ;
+	border: 2px solid #000000 ;
 	padding: 25px;
 	font: "Courier New", monospace;
         font-size: 25px;
@@ -126,7 +126,7 @@ th {
 }
 td {
 	height: 30px;
-	background-color: #917e4e;
+	background-color: #00ff00;
         color: $black;
 }
 
