--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-	background-image: url("https://www.wallpapers4k.org/wp-content/uploads/2018/07/Ferrari-HD-Wallpapers-22.jpg");
+	background-image: url("http://www.hdcarwallpapers.com/walls/mercedes_sls_amg_hd-HD.jpg");
   font: 18px/1.4 $helvetica;
   color: $darkGray;
 }
