--- a/style.scss
+++ b/style.scss
@@ -120,13 +120,13 @@ table {
     width: 100%;
 }
 th {
-	height: 50px;
-	background-color: #66b7ff;
+	height: 30px;
+	background-color: #ffffff;
         color: $black;
 }
 td {
 	height: 30px;
-	background-color: #c9cfd8;
+	background-color: #999999;
         color: $black;
 }
 
